--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -33,12 +33,27 @@
 
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
+                    {% if request.session.customer %}
                     <li class="nav-item">
+                        <li class="nav-item">
 
-                        <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="/cart">Cart</a>
+    
+                        </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Profile
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/order">Orders</a></li>
+                        </ul>
+                    </li>
+
+                    <a class="nav-link" href="logout"><span></span>Logout</a>
 
                     </li>
+                    {% else %}
                     <li class="nav-item">
 
                         <a class="nav-link" href="login">Login</a>
@@ -48,21 +63,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="signup">Signup</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Profile
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
 
+                    {% endif %}
                 </ul>
 
 
