--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -36,9 +36,7 @@
                     {% if request.session.customer %}
                     <li class="nav-item">
                         <li class="nav-item">
-
                             <a class="nav-link" href="/cart">Cart</a>
-    
                         </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -55,7 +53,9 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cart">Cart</a>
+                        </li>
                         <a class="nav-link" href="login">Login</a>
 
                     </li>
