--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -36,7 +36,8 @@
                     {% if request.session.customer %}
                     <li class="nav-item">
                         <li class="nav-item">
-                            <a class="nav-link" href="/cart">Cart</a>
+                            <a class="nav-link" href="/cart">Cart<span class="badge bg-secondary">{{request.session.cart.keys|length}}</span>
+</a>
                         </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
